SERVER-65664 Provide more specific types for cache alignment needs