src/mongo/db/stats/counters.cpp
@@ -47,7 +47,7 @@ namespace {
 using namespace fmt::literals;
 }
 
-void OpCounters::_checkWrap(CacheAligned<AtomicWord<long long>> OpCounters::*counter, int n) {
+void OpCounters::_checkWrap(CacheExclusive<AtomicWord<long long>> OpCounters::*counter, int n) {
     static constexpr auto maxCount = 1LL << 60;
     auto oldValue = (this->*counter)->fetchAndAddRelaxed(n);
     if (oldValue > maxCount) {
@@ -189,7 +189,7 @@ void NetworkCounter::incrementNumSlowSSLOperations() {
 }
 
 void NetworkCounter::acceptedTFOIngress() {
-    _tfo->accepted.fetchAndAddRelaxed(1);
+    _tfoAccepted->fetchAndAddRelaxed(1);
 }
 
 void NetworkCounter::append(BSONObjBuilder& b) {
@@ -203,11 +203,11 @@ void NetworkCounter::append(BSONObjBuilder& b) {
 
     BSONObjBuilder tfo;
 #ifdef __linux__
-    tfo.append("kernelSetting", _tfo->kernelSetting);
+    tfo.append("kernelSetting", _tfoKernelSetting);
 #endif
-    tfo.append("serverSupported", _tfo->kernelSupportServer);
-    tfo.append("clientSupported", _tfo->kernelSupportClient);
-    tfo.append("accepted", _tfo->accepted.loadRelaxed());
+    tfo.append("serverSupported", _tfoKernelSupportServer);
+    tfo.append("clientSupported", _tfoKernelSupportClient);
+    tfo.append("accepted", _tfoAccepted->loadRelaxed());
     b.append("tcpFastOpen", tfo.obj());
 }
 
