src/mongo/util/aligned_test.cpp
@@ -104,10 +104,10 @@ TEST(Aligned, Swap) {
     ASSERT_EQ(m2->val, 111);
 }
 
-TEST(CacheAligned, IsAlignedToPlatformCacheLine) {
+TEST(CacheExclusive, IsAlignedToPlatformCacheLine) {
     static constexpr size_t a = stdx::hardware_destructive_interference_size;
-    MONGO_STATIC_ASSERT(alignof(CacheAligned<char>) == a);
-    MONGO_STATIC_ASSERT(alignof(CacheAligned<char>) == a);
+    MONGO_STATIC_ASSERT(alignof(CacheExclusive<char>) == a);
+    MONGO_STATIC_ASSERT(alignof(CacheExclusive<char>) == a);
 }
 
 }  // namespace
